deployment-nginx-diplom.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-diplom
  labels:
    app: nginx-diplom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-diplom
  template:
    metadata:
      labels:
        app: nginx-diplom
    spec:
      containers:
        - name: nginx-diplom
          image: reocoker/nginx-diplom:v.1
          ports:
            - containerPort: 80
...
