service-nginx-dimplom.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-diplom
spec:
  ports:
  - name: nginx-diplom
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx-diplom
...
